Revert code update to fix behaviour